# ShapEmotionsCorrectionAPI

./: .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_sentiment.py
docs/: openapi.json
src/: main.py
src/models/: sentiment.py  toxic.py
tests/: test_sentiment.py
