[tool.poetry]
name = "shapemotionscorrectionapi"
version = "1.0.0"
description = "SHAP-based emotion correction API"
authors = ["Piotr Krawiec"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
transformers = "^4.24.0"
shap = "^0.41.0"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
torch = "^1.13.0"
python-dotenv = "^0.21.0"


[tools.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
